# agent-framework-playground

./: README.md  built_in_agent.py  conditional_edge.py  demo_concurrent_builder.py  direct_edge.py  fan_out_edges_all.py  fan_out_edges_all_events.py  fan_out_edges_all_fan_in.py  fan_out_edges_all_streaming.py  fan_out_edges_selective.py  pyproject.toml  switch_edge_cases.py
